--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,7 @@ Depends:
   two.laws.big.bang,
   rmarkdown,
   knitr,
-  htmltools,
-  testthat
+  htmltools
 RoxygenNote: 6.0.1
 Suggests: knitr,
     rmarkdown,
