refactor and added test case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(AddSvgTagsToHtmlTools)
 export(AddTagsToHtmlTools)
 export(BB.HtmlGeneratorBaseClass)
 export(CodeToHtml)
+export(CreateTagFunction)
 export(ExcelMarkdownToTagList)
 export(FunctionToHtml)
 export(HtmlGeneratorBaseClass)
