--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ RoxygenNote: 6.0.1
 Suggests:
     testthat
 Collate: 
+    'polymorphism.R'
     'CodeToHtml.R'
     'HtmlToTagList.R'
     'MarkdownToHtml.R'
