--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(CodeToHtml)
 export(CreateTagFunction)
 export(ExcelMarkdownToTagList)
 export(FunctionToHtml)
+export(HighlightCode)
 export(HtmlGeneratorBaseClass)
 export(HtmlToTagList)
 export(MarkdownToHtml)
@@ -14,3 +15,4 @@ export(MarkdownToHtmlTagList)
 export(TagListToHtml)
 export(UnescapeEntities)
 export(UnescapeTagList)
+export(as.html)
